Add: OCR model for reading Captchas

--- a/Computer Vision/3D_image_classification.ipynb
+++ b/Computer Vision/3D_image_classification.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 3D image classification from CT scans\n",
+        "# 3D image classification from CT scans (CTスキャンからの3D画像分類)\n",
         "\n",
         "**Author:** [Hasib Zunair](https://twitter.com/hasibzunair)<br>\n",
         "**Date created:** 2020/09/23<br>\n",
@@ -44,15 +44,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction\n",
-        "\n",
-        "This example will show the steps needed to build a 3D convolutional neural network (CNN) to predict the presence of viral pneumonia in computer tomography (CT) scans. 2D CNNs are commonly used to process RGB images (3 channels).  \n",
-        "A 3D CNN is simply the 3D equivalent: it takes as input a 3D volume or a sequence of 2D frames (e.g. slices in a CT scan), 3D CNNs are a powerful model for learning representations for volumetric data.\n",
+        "## 序章\n",
         "\n",
         "この例では、コンピュータ断層撮影（CT）スキャンにおけるウイルス性肺炎の有無を予測するための3Dコンボリューショナル・ニューラル・ネットワーク（CNN）を構築するために必要な手順を示します。2D CNNは通常、RGB画像（3チャンネル）の処理に使われます。  \n",
         "3D CNNは単純に3Dに相当するもので、3Dボリュームまたは2Dフレームのシーケンス（例：CTスキャンのスライス）を入力とし、3D CNNはボリュームデータの表現を学習するための強力なモデルである。\n",
         "\n",
-        "## References\n",
+        "## 参考文献\n",
         "\n",
         "- [A survey on Deep Learning Advances on Different 3D DataRepresentations](https://arxiv.org/pdf/1808.01462.pdf)\n",
         "- [VoxNet: A 3D Convolutional Neural Network for Real-Time Object Recognition](https://www.ri.cmu.edu/pub_files/2015/9/voxnet_maturana_scherer_iros15.pdf)\n",
@@ -66,7 +63,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Setup"
+        "## 設定"
       ],
       "metadata": {
         "id": "YyKiCr6TLttN"
@@ -92,18 +89,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Downloading the MosMedData: Chest CT Scans with COVID-19 Related Findings\n",
-        "\n",
-        "In this example, we use a subset of the\n",
-        "[MosMedData: Chest CT Scans with COVID-19 Related Findings](https://www.medrxiv.org/content/10.1101/2020.05.20.20100362v1).\n",
-        "This dataset consists of lung CT scans with COVID-19 related findings, as well as without such findings.\n",
+        "## MosMedDataをダウンロード: COVID-19関連所見を伴う胸部CTスキャン\n",
         "\n",
         "この例では、サブセットを使用しています。  \n",
         "[MosMedData: Chest CT Scans with COVID-19 Related Findings](https://www.medrxiv.org/content/10.1101/2020.05.20.20100362v1)です。\n",
         "このデータセットは、COVID-19関連の所見がある肺CTスキャンと、そのような所見がない肺CTスキャンで構成されています。\n",
-        "\n",
-        "We will be using the associated radiological findings of the CT scans as labels to build a classifier to predict presence of viral pneumonia.  \n",
-        "Hence, the task is a binary classification problem.\n",
         "\n",
         "我々は、CTスキャンの関連する放射線学的所見をラベルとして使用し、ウイルス性肺炎の存在を予測する分類器を構築する予定です。  \n",
         "したがって、このタスクは二値の分類問題となります。"
@@ -144,28 +134,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Loading data and preprocessing\n",
-        "\n",
-        "The files are provided in Nifti format with the extension .nii. To read the scans, we use the `nibabel` package.  \n",
-        "You can install the package via `pip install nibabel`.  \n",
-        "CT scans store raw voxel intensity in Hounsfield units (HU).  \n",
-        "They range from -1024 to above 2000 in this dataset.  \n",
-        "Above 400 are bones with different radiointensity, so this is used as a higher bound. A threshold between -1000 and 400 is commonly used to normalize CT scans.\n",
+        "## データの読み込みと前処理\n",
         "\n",
         "ファイルはNifti形式で提供され、拡張子は.niiです。スキャンデータを読むためには，`nibabel`パッケージを使います。  \n",
         "このパッケージは `pip install nibabel` でインストールできます。  \n",
         "CTスキャンでは、生のボクセル強度をHounsfield units（HU）で保存します。  \n",
         "このデータセットでは、-1024から2000以上の範囲です。  \n",
         "400以上は放射線強度が異なる骨なので、これを上限としています。CTスキャンの正規化には、-1000から400の間の閾値がよく使われます。\n",
-        "\n",
-        "To process the data, we do the following:\n",
-        "\n",
-        "* We first rotate the volumes by 90 degrees, so the orientation is fixed\n",
-        "* We scale the HU values to be between 0 and 1.\n",
-        "* We resize width, height and depth.\n",
-        "\n",
-        "Here we define several helper functions to process the data.  \n",
-        "These functions will be used when building training and validation datasets.  \n",
         "\n",
         "このデータを処理するために、次のようなことを行います。\n",
         "\n",
@@ -242,7 +217,7 @@
         "    volume = normalize(volume)\n",
         "    # Resize width, height and depth\n",
         "    volume = resize_volume(volume)\n",
-        "    return volume\n"
+        "    return volume"
       ],
       "outputs": [],
       "metadata": {
@@ -252,8 +227,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let's read the paths of the CT scans from the class directories.\n",
-        "\n",
         "クラスのディレクトリからCTスキャンのパスを読み取ってみましょう。"
       ],
       "metadata": {
@@ -278,7 +251,7 @@
         "]\n",
         "\n",
         "print(\"CT scans with normal lung tissue: \" + str(len(normal_scan_paths)))\n",
-        "print(\"CT scans with abnormal lung tissue: \" + str(len(abnormal_scan_paths)))\n"
+        "print(\"CT scans with abnormal lung tissue: \" + str(len(abnormal_scan_paths)))"
       ],
       "outputs": [],
       "metadata": {
@@ -288,9 +261,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Build train and validation datasets\n",
-        "Read the scans from the class directories and assign labels. Downsample the scans to have shape of 128x128x64. Rescale the raw HU values to the range 0 to 1.  \n",
-        "Lastly, split the dataset into train and validation subsets.\n",
+        "## 学習・検証用データセットの構築\n",
         "\n",
         "クラスのディレクトリからスキャン画像を読み込んで、ラベルを割り当てる。スキャンを128x128x64の形状にダウンサンプルする。生のHU値を0から1の範囲にリスケールする。  \n",
         "最後に、データセットを訓練用と検証用のサブセットに分割する。"
@@ -331,12 +302,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Data augmentation\n",
-        "\n",
-        "The CT scans also augmented by rotating at random angles during training.  \n",
-        "Since the data is stored in rank-3 tensors of shape `(samples, height, width, depth)`, we add a dimension of size 1 at axis 4 to be able to perform 3D convolutions on the data.  \n",
-        "The new shape is thus `(samples, height, width, depth, 1)`.  \n",
-        "There are different kinds of preprocessing and augmentation techniques out there, this example shows a few simple ones to get started.\n",
+        "## データの増強\n",
         "\n",
         "CTスキャンもトレーニング中にランダムな角度で回転させて増強しています。  \n",
         "データはランク3のテンソルで，形状は`(samples, height, width, depth)`であるため，データに3次元の畳み込みを行えるように，軸4にサイズ1の次元を追加する。  \n",
@@ -396,9 +362,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "While defining the train and validation data loader, the training data is passed through and augmentation function which randomly rotates volume at different angles.  \n",
-        "Note that both training and validation data are already rescaled to have values between 0 and 1.\n",
-        "\n",
         "トレーニングデータと検証データのローダを定義する際に、トレーニングデータは、ボリュームを様々な角度でランダムに回転させるオーグメンテーション関数に渡されます。  \n",
         "なお、トレーニングデータと検証データは、0から1の間の値にリスケールされています。"
       ],
@@ -438,8 +401,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Visualize an augmented CT scan.\n",
-        "\n",
         "拡張されたCTスキャンを視覚化する。"
       ],
       "metadata": {
@@ -457,7 +418,7 @@
         "images = images.numpy()\n",
         "image = images[0]\n",
         "print(\"Dimension of the CT scan is:\", image.shape)\n",
-        "plt.imshow(np.squeeze(image[:, :, 30]), cmap=\"gray\")\n"
+        "plt.imshow(np.squeeze(image[:, :, 30]), cmap=\"gray\")"
       ],
       "outputs": [],
       "metadata": {
@@ -467,8 +428,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Since a CT scan has many slices, let's visualize a montage of the slices.\n",
-        "\n",
         "CTスキャンはたくさんのスライスがあるので、スライスのモンタージュをイメージしてみましょう。"
       ],
       "metadata": {
@@ -516,10 +475,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Define a 3D convolutional neural network\n",
-        "\n",
-        "To make the model easier to understand, we structure it into blocks.  \n",
-        "The architecture of the 3D CNN used in this example is based on [this paper](https://arxiv.org/abs/2007.13224).\n",
+        "## 3D畳み込みニューラル・ネットワークの定義\n",
         "\n",
         "モデルを理解しやすくするために、ブロックに分けて構造化する。  \n",
         "この例で使用した3D CNNのアーキテクチャは[this paper](https://arxiv.org/abs/2007.13224)を参考にしています。"
@@ -577,7 +533,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Train model"
+        "## モデルのトレーニング"
       ],
       "metadata": {
         "id": "JtsASCipLttR"
@@ -623,12 +579,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "It is important to note that the number of samples is very small (only 200) and we don't specify a random seed.  \n",
-        "As such, you can expect significant variance in the results.  \n",
-        "The full dataset which consists of over 1000 CT scans can be found [here](https://www.medrxiv.org/content/10.1101/2020.05.20.20100362v1).  \n",
-        "Using the full dataset, an accuracy of 83% was achieved.  \n",
-        "A variability of 6-7% in the classification performance is observed in both cases.\n",
-        "\n",
         "ここで重要なのは、サンプル数が非常に少なく（200個しかない）、ランダムシードを指定していないことです。  \n",
         "そのため、結果には大きなばらつきがあることが予想されます。  \n",
         "1000件以上のCTスキャンからなる完全なデータセットは[こちら](https://www.medrxiv.org/content/10.1101/2020.05.20.20100362v1)にあります。  \n",
@@ -642,10 +592,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Visualizing model performance\n",
-        "\n",
-        "Here the model accuracy and loss for the training and the validation sets are plotted.  \n",
-        "Since the validation set is class-balanced, accuracy provides an unbiased representation of the model's performance.\n",
+        "## モデルの性能を可視化する\n",
         "\n",
         "ここでは，学習セットと検証セットのモデルの精度と損失がプロットされている。  \n",
         "検証セットはクラスバランスが取れているため、精度はモデルのパフォーマンスを偏りなく表しています。"
@@ -677,7 +624,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Make predictions on a single CT scan"
+        "## 単一のCTスキャンで予測する"
       ],
       "metadata": {
         "id": "agVUgw7BLttR"
