--- a/Computer Vision/mnist_convnet.ipynb
+++ b/Computer Vision/mnist_convnet.ipynb
@@ -2,66 +2,52 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "bnmX88_mSZ-E"
-      },
       "source": [
-        "# Simple MNIST convnet\n",
+        "# Simple MNIST convnet (単純なMNISTの畳み込みネットワーク)\n",
         "\n",
         "**Author:** [fchollet](https://twitter.com/fchollet)<br>\n",
         "**Date created:** 2015/06/19<br>\n",
         "**Last modified:** 2020/04/21<br>\n",
         "**Description:** A simple convnet that achieves ~99% test accuracy on MNIST."
-      ]
+      ],
+      "metadata": {
+        "id": "bnmX88_mSZ-E"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## 設定"
+      ],
       "metadata": {
         "id": "85HRX6NoSZ-F"
-      },
-      "source": [
-        "## Setup"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": 1,
-      "metadata": {
-        "id": "xoh1WFtpSZ-F"
-      },
-      "outputs": [],
       "source": [
         "import numpy as np\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "xoh1WFtpSZ-F"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## データの準備"
+      ],
       "metadata": {
         "id": "z3kBffEuSZ-G"
-      },
-      "source": [
-        "## Prepare the data"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": 2,
-      "metadata": {
-        "id": "dOOwAW-7SZ-G"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "x_train shape: (60000, 28, 28, 1)\n",
-            "60000 train samples\n",
-            "10000 test samples\n"
-          ]
-        }
-      ],
       "source": [
         "# Model / data parameters\n",
         "num_classes = 10\n",
@@ -84,27 +70,54 @@
         "# convert class vectors to binary class matrices\n",
         "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
         "y_test = keras.utils.to_categorical(y_test, num_classes)"
-      ]
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x_train shape: (60000, 28, 28, 1)\n",
+            "60000 train samples\n",
+            "10000 test samples\n"
+          ]
+        }
+      ],
+      "metadata": {
+        "id": "dOOwAW-7SZ-G"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## モデルの構築"
+      ],
       "metadata": {
         "id": "dNO68b_OSZ-G"
-      },
-      "source": [
-        "## Build the model"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": 3,
-      "metadata": {
-        "id": "uOX5zkiDSZ-G"
-      },
+      "source": [
+        "model = keras.Sequential(\n",
+        "    [\n",
+        "        keras.Input(shape=input_shape),\n",
+        "        layers.Conv2D(32, kernel_size=(3, 3), activation=\"relu\"),\n",
+        "        layers.MaxPooling2D(pool_size=(2, 2)),\n",
+        "        layers.Conv2D(64, kernel_size=(3, 3), activation=\"relu\"),\n",
+        "        layers.MaxPooling2D(pool_size=(2, 2)),\n",
+        "        layers.Flatten(),\n",
+        "        layers.Dropout(0.5),\n",
+        "        layers.Dense(num_classes, activation=\"softmax\"),\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "model.summary()"
+      ],
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "WARNING:tensorflow:Please add `keras.layers.InputLayer` instead of `keras.Input` to Sequential model. `keras.Input` is intended to be used by Functional model.\n",
             "Model: \"sequential\"\n",
@@ -132,42 +145,34 @@
           ]
         }
       ],
-      "source": [
-        "model = keras.Sequential(\n",
-        "    [\n",
-        "        keras.Input(shape=input_shape),\n",
-        "        layers.Conv2D(32, kernel_size=(3, 3), activation=\"relu\"),\n",
-        "        layers.MaxPooling2D(pool_size=(2, 2)),\n",
-        "        layers.Conv2D(64, kernel_size=(3, 3), activation=\"relu\"),\n",
-        "        layers.MaxPooling2D(pool_size=(2, 2)),\n",
-        "        layers.Flatten(),\n",
-        "        layers.Dropout(0.5),\n",
-        "        layers.Dense(num_classes, activation=\"softmax\"),\n",
-        "    ]\n",
-        ")\n",
-        "\n",
-        "model.summary()"
-      ]
+      "metadata": {
+        "id": "uOX5zkiDSZ-G"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## モデルのトレーニング"
+      ],
       "metadata": {
         "id": "rprP2R4gSZ-G"
-      },
-      "source": [
-        "## Train the model"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": 14,
-      "metadata": {
-        "id": "45ut4SKwSZ-G"
-      },
+      "source": [
+        "batch_size = 128\n",
+        "epochs = 15\n",
+        "\n",
+        "model.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
+        "\n",
+        "model.fit(x_train, y_train, batch_size=batch_size, epochs=epochs, validation_split=0.1)"
+      ],
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "<class 'numpy.ndarray'> <class 'numpy.ndarray'>\n",
             "Epoch 1/15\n",
@@ -175,9 +180,9 @@
           ]
         },
         {
+          "output_type": "error",
           "ename": "ValueError",
           "evalue": "in user code:\n\n    /Users/shogo/miniforge3/envs/tf/lib/python3.9/site-packages/tensorflow/python/keras/engine/training.py:1323 test_function  *\n        return step_function(self, iterator)\n    /Users/shogo/miniforge3/envs/tf/lib/python3.9/site-packages/tensorflow/python/keras/engine/training.py:1314 step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    /Users/shogo/miniforge3/envs/tf/lib/python3.9/site-packages/tensorflow/python/distribute/distribute_lib.py:1285 run\n        return self._extended.call_for_each_replica(fn, args=args, kwargs=kwargs)\n    /Users/shogo/miniforge3/envs/tf/lib/python3.9/site-packages/tensorflow/python/distribute/distribute_lib.py:2833 call_for_each_replica\n        return self._call_for_each_replica(fn, args, kwargs)\n    /Users/shogo/miniforge3/envs/tf/lib/python3.9/site-packages/tensorflow/python/distribute/distribute_lib.py:3608 _call_for_each_replica\n        return fn(*args, **kwargs)\n    /Users/shogo/miniforge3/envs/tf/lib/python3.9/site-packages/tensorflow/python/keras/engine/training.py:1307 run_step  **\n        outputs = model.test_step(data)\n    /Users/shogo/miniforge3/envs/tf/lib/python3.9/site-packages/tensorflow/python/keras/engine/training.py:1266 test_step\n        y_pred = self(x, training=False)\n    /Users/shogo/miniforge3/envs/tf/lib/python3.9/site-packages/tensorflow/python/keras/engine/base_layer.py:1013 __call__\n        input_spec.assert_input_compatibility(self.input_spec, inputs, self.name)\n    /Users/shogo/miniforge3/envs/tf/lib/python3.9/site-packages/tensorflow/python/keras/engine/input_spec.py:200 assert_input_compatibility\n        raise ValueError('Layer ' + layer_name + ' expects ' +\n\n    ValueError: Layer sequential expects 1 input(s), but it received 2 input tensors. Inputs received: [<tf.Tensor 'IteratorGetNext:0' shape=(None, 28, 28, 1) dtype=float32>, <tf.Tensor 'IteratorGetNext:1' shape=(None, 10) dtype=float32>]\n",
-          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
@@ -197,52 +202,40 @@
           ]
         }
       ],
-      "source": [
-        "batch_size = 128\n",
-        "epochs = 15\n",
-        "\n",
-        "model.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
-        "\n",
-        "model.fit(x_train, y_train, batch_size=batch_size, epochs=epochs, validation_split=0.1)\n"
-      ]
+      "metadata": {
+        "id": "45ut4SKwSZ-G"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## 学習したモデルを評価する"
+      ],
       "metadata": {
         "id": "ffPrsrfRSZ-H"
-      },
-      "source": [
-        "## Evaluate the trained model"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": 6,
-      "metadata": {
-        "id": "y-2iSDrHSZ-H"
-      },
+      "source": [
+        "score = model.evaluate(x_test, y_test, verbose=0)\n",
+        "print(\"Test loss:\", score[0])\n",
+        "print(\"Test accuracy:\", score[1])"
+      ],
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Test loss: 0.025151938199996948\n",
             "Test accuracy: 0.9908000230789185\n"
           ]
         }
       ],
-      "source": [
-        "score = model.evaluate(x_test, y_test, verbose=0)\n",
-        "print(\"Test loss:\", score[0])\n",
-        "print(\"Test accuracy:\", score[1])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
+      "metadata": {
+        "id": "y-2iSDrHSZ-H"
+      }
     }
   ],
   "metadata": {
@@ -273,5 +266,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
