--- a/Computer Vision/oxford_pets_image_segmentation.ipynb
+++ b/Computer Vision/oxford_pets_image_segmentation.ipynb
@@ -2,38 +2,40 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "rV2_2sw2a8oN"
-      },
       "source": [
-        "# Image segmentation with a U-Net-like architecture\n",
+        "# Image segmentation with a U-Net-like architecture (U-Netライクなアーキテクチャによる画像のセグメンテーション)\n",
         "\n",
         "**Author:** [fchollet](https://twitter.com/fchollet)<br>\n",
         "**Date created:** 2019/03/20<br>\n",
         "**Last modified:** 2020/04/20<br>\n",
         "**Description:** Image segmentation model trained from scratch on the Oxford Pets dataset."
-      ]
+      ],
+      "metadata": {
+        "id": "rV2_2sw2a8oN"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## データのダウンロード"
+      ],
       "metadata": {
         "id": "RLZSGUhZa8oP"
-      },
-      "source": [
-        "## Download the data\n",
-        "データのダウンロード"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": 1,
-      "metadata": {
-        "id": "m16WwLZva8oP"
-      },
+      "source": [
+        "!curl -O https://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz\n",
+        "!curl -O https://www.robots.ox.ac.uk/~vgg/data/pets/data/annotations.tar.gz\n",
+        "!tar -xf images.tar.gz\n",
+        "!tar -xf annotations.tar.gz"
+      ],
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
@@ -41,30 +43,22 @@
           ]
         }
       ],
-      "source": [
-        "!curl -O https://www.robots.ox.ac.uk/~vgg/data/pets/data/images.tar.gz\n",
-        "!curl -O https://www.robots.ox.ac.uk/~vgg/data/pets/data/annotations.tar.gz\n",
-        "!tar -xf images.tar.gz\n",
-        "!tar -xf annotations.tar.gz"
-      ]
+      "metadata": {
+        "id": "m16WwLZva8oP"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## 入力画像のパスと対象となるセグメンテーションマスクの準備"
+      ],
       "metadata": {
         "id": "Mu2-3qffa8oQ"
-      },
-      "source": [
-        "## Prepare paths of input images and target segmentation masks\n",
-        "入力画像のパスと対象となるセグメンテーションマスクの準備"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "5mDIFdwda8oQ"
-      },
-      "outputs": [],
       "source": [
         "import os\n",
         "\n",
@@ -93,25 +87,24 @@
         "\n",
         "for input_path, target_path in zip(input_img_paths[:10], target_img_paths[:10]):\n",
         "    print(input_path, \"|\", target_path)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "5mDIFdwda8oQ"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## 1枚の入力画像とそれに対応するセグメンテーションマスクはどのようなものでしょうか？"
+      ],
       "metadata": {
         "id": "VKJTrXkQa8oQ"
-      },
-      "source": [
-        "## What does one input image and corresponding segmentation mask look like?\n",
-        "1枚の入力画像とそれに対応するセグメンテーションマスクはどのようなものでしょうか？"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "iW6Iy0-Ha8oQ"
-      },
-      "outputs": [],
       "source": [
         "from IPython.display import Image, display\n",
         "from tensorflow.keras.preprocessing.image import load_img\n",
@@ -124,25 +117,24 @@
         "# Display auto-contrast version of corresponding target (per-pixel categories)\n",
         "img = PIL.ImageOps.autocontrast(load_img(target_img_paths[9]))\n",
         "display(img)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "iW6Iy0-Ha8oQ"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## データのバッチをロードしてベクター化するための`Sequence`クラスの準備"
+      ],
       "metadata": {
         "id": "iItyFcWsa8oQ"
-      },
-      "source": [
-        "## Prepare `Sequence` class to load & vectorize batches of data\n",
-        "データのバッチをロードしてベクター化するための`Sequence`クラスの準備"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "cKDhigA2a8oQ"
-      },
-      "outputs": [],
       "source": [
         "from tensorflow import keras\n",
         "import numpy as np\n",
@@ -176,26 +168,25 @@
         "            y[j] = np.expand_dims(img, 2)\n",
         "            # Ground truth labels are 1, 2, 3. Subtract one to make them 0, 1, 2:\n",
         "            y[j] -= 1\n",
-        "        return x, y\n"
-      ]
+        "        return x, y"
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "cKDhigA2a8oQ"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## U-Net Xceptionスタイルのモデルを用意"
+      ],
       "metadata": {
         "id": "_XzOfvXqa8oR"
-      },
-      "source": [
-        "## Prepare U-Net Xception-style model\n",
-        "U-Net Xceptionスタイルのモデルを用意"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "ApzIuk0Sa8oR"
-      },
-      "outputs": [],
       "source": [
         "from tensorflow.keras import layers\n",
         "\n",
@@ -264,25 +255,24 @@
         "# Build model\n",
         "model = get_model(img_size, num_classes)\n",
         "model.summary()"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "ApzIuk0Sa8oR"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## 検証用のスプリットを用意する"
+      ],
       "metadata": {
         "id": "mOzlNstPa8oR"
-      },
-      "source": [
-        "## Set aside a validation split\n",
-        "検証用のスプリットを用意する"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "ih0wyNF2a8oS"
-      },
-      "outputs": [],
       "source": [
         "import random\n",
         "\n",
@@ -300,25 +290,24 @@
         "    batch_size, img_size, train_input_img_paths, train_target_img_paths\n",
         ")\n",
         "val_gen = OxfordPets(batch_size, img_size, val_input_img_paths, val_target_img_paths)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "ih0wyNF2a8oS"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## モデルのトレーニング"
+      ],
       "metadata": {
         "id": "Od1FPM4qa8oS"
-      },
-      "source": [
-        "## Train the model\n",
-        "モデルのトレーニング"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "KHqxEcDfa8oS"
-      },
-      "outputs": [],
       "source": [
         "# Configure the model for training.\n",
         "# We use the \"sparse\" version of categorical_crossentropy\n",
@@ -332,25 +321,24 @@
         "# Train the model, doing validation at the end of each epoch.\n",
         "epochs = 15\n",
         "model.fit(train_gen, epochs=epochs, validation_data=val_gen, callbacks=callbacks)"
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "KHqxEcDfa8oS"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## 予測の可視化"
+      ],
       "metadata": {
         "id": "UsT928tOa8oS"
-      },
-      "source": [
-        "## Visualize predictions\n",
-        "予測の可視化"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "Iv86fMhia8oS"
-      },
-      "outputs": [],
       "source": [
         "# Generate predictions for all images in the validation set\n",
         "\n",
@@ -378,7 +366,11 @@
         "\n",
         "# Display mask predicted by our model\n",
         "display_mask(i)  # Note that the model only sees inputs at 150x150."
-      ]
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "Iv86fMhia8oS"
+      }
     }
   ],
   "metadata": {
@@ -409,5 +401,5 @@
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 0
+  "nbformat_minor": 2
 }
