--- a/Computer Vision/adamatch.ipynb
+++ b/Computer Vision/adamatch.ipynb
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Semi-supervision and domain adaptation with AdaMatch\n",
+        "# Semi-supervision and domain adaptation with AdaMatch (AdaMatchを用いたセミスーパビジョンとドメインアダプテーション)\n",
         "\n",
         "**Author:** [Sayak Paul](https://twitter.com/RisingSayak)<br>\n",
         "**Date created:** 2021/06/19<br>\n",
@@ -44,12 +44,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction\n",
-        "\n",
-        "In this example, we will implement the AdaMatch algorithm, proposed in [AdaMatch: A Unified Approach to Semi-Supervised Learning and Domain Adaptation](https://arxiv.org/abs/2106.04732) by Berthelot et al. It sets a new state-of-the-art in unsupervised domain adaptation (as of June 2021).  \n",
-        "AdaMatch is particularly interesting because it unifies semi-supervised learning (SSL) and unsupervised domain adaptation (UDA) under one framework.  \n",
-        "It thereby provides a way to perform semi-supervised domain adaptation (SSDA).  \n",
-        "This example requires TensorFlow 2.5 or higher, as well as TensorFlow Models, which can be installed using the following command:\n",
+        "## 序章\n",
         "\n",
         "この例では、[AdaMatch: A Unified Approach to Semi-Supervised Learning and Domain Adaptation](https://arxiv.org/abs/2106.04732)でBerthelotらによって提案されたAdaMatchアルゴリズムを実装します。このアルゴリズムは、教師なしドメイン適応の新たな最先端を示しています（2021年6月現在）。  \n",
         "AdaMatchが特に興味深いのは、半教師付き学習(SSL)と教師なしドメイン適応(UDA)を一つのフレームワークで統合している点です。  \n",
@@ -74,8 +69,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Before we proceed, let's review a few preliminary concepts underlying this example.\n",
-        "\n",
         "その前に、今回の例の基礎となる考え方を少しおさらいしておきましょう。"
       ],
       "metadata": {
@@ -85,21 +78,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Preliminaries\n",
-        "\n",
-        "In **semi-supervised learning (SSL)**, we use a small amount of labeled data to train models on a bigger unlabeled dataset. Popular semi-supervised learning methods for computer vision include [FixMatch](https://arxiv.org/abs/2001.07685), [MixMatch](https://arxiv.org/abs/1905.02249), [Noisy Student Training](https://arxiv.org/abs/1911.04252), etc. You can refer to [this example](https://keras.io/examples/vision/consistency_training/) to get an idea of what a standard SSL workflow looks like.\n",
+        "## プレリミナリー\n",
         "\n",
         "**半教師付き学習(semi-supervised learning, SSL)** では、少量のラベル付きデータを用いて、より大きなラベル無しデータセットに対してモデルを学習します。コンピュータビジョンの半教師付き学習法としては、[FixMatch](https://arxiv.org/abs/2001.07685), [MixMatch](https://arxiv.org/abs/1905.02249), [Noisy Student Training](https://arxiv.org/abs/1911.04252)などが有名です。標準的なSSLのワークフローがどのようなものか、[this example](https://keras.io/examples/vision/consistency_training/)を参考にしてみてください。\n",
-        "\n",
-        "In **unsupervised domain adaptation**, we have access to a source labeled dataset and a target *unlabeled* dataset. Then the task is to learn a model that can generalize well to the target dataset. The source and the target datasets vary in terms of distribution.\n",
-        "The following figure provides an illustration of this idea. In the present example, we use the [MNIST dataset](http://yann.lecun.com/exdb/mnist/) as the source dataset, while the target dataset is [SVHN](http://ufldl.stanford.edu/housenumbers/), which consists of images of house numbers. Both datasets have various varying factors in terms of texture, viewpoint, appearence, etc.: their domains, or distributions, are different from one another.\n",
         "\n",
         "**教師なしドメイン適応** では、ソースとなるラベル付きデータセットとターゲットとなる*ラベルなし*データセットにアクセスできます。タスクは、ターゲットデータセットにうまく一般化できるモデルを学習することである。ソースデータセットとターゲットデータセットは、分布の点で異なります。\n",
         "次の図は、このアイデアを説明するものである。今回の例では、ソースデータセットとして[MNIST dataset](http://yann.lecun.com/exdb/mnist/)を使い、ターゲットデータセットは家の番号の画像で構成された[SVHN](http://ufldl.stanford.edu/housenumbers/)を使います。どちらのデータセットも、テクスチャ、視点、見た目など様々な要素が異なるため、ドメイン（分布）が互いに異なっています。\n",
         "\n",
         "![](https://i.imgur.com/dJFSJuT.png)\n",
-        "\n",
-        "Popular domain adaptation algorithms in deep learning include [Deep CORAL](https://arxiv.org/abs/1612.01939), [Moment Matching](https://arxiv.org/abs/1812.01754), etc.\n",
         "\n",
         "深層学習でよく使われるドメイン適応アルゴリズムには、[Deep CORAL](https://arxiv.org/abs/1612.01939)、[Moment Matching](https://arxiv.org/abs/1812.01754)などがあります。"
       ],
@@ -110,7 +96,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Setup"
+        "## 設定"
       ],
       "metadata": {
         "id": "gqN-4ihjE1VE"
@@ -143,7 +129,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Prepare the data"
+        "## データの準備"
       ],
       "metadata": {
         "id": "dtZRFwsGE1VE"
@@ -179,7 +165,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Define constants and hyperparameters"
+        "## 定数とハイパーパラメータの定義"
       ],
       "metadata": {
         "id": "U2AsPcfqE1VE"
@@ -213,11 +199,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Data augmentation utilities\n",
-        "\n",
-        "A standard element of SSL algorithms is to feed weakly and strongly augmented versions of the same images to the learning model to make its predictions consistent. For strong\n",
-        "augmentation, [RandAugment](https://arxiv.org/abs/1909.13719) is a standard choice.  \n",
-        "For weak augmentation, we will use horizontal flipping and random cropping.\n",
+        "## データ拡張ユーティリティ\n",
         "\n",
         "SSLアルゴリズムの標準的な要素は，学習モデルの予測に一貫性を持たせるために，同じ画像の弱増強版と強増強版を学習モデルに与えることである．強い\n",
         "augmentationに対しては，[RandAugment](https://arxiv.org/abs/1909.13719)が標準的な選択です． \n",
@@ -258,7 +240,7 @@
         "        image = tf.image.resize_with_pad(image, RESIZE_TO, RESIZE_TO)\n",
         "        image = tf.tile(image, [1, 1, 3])\n",
         "    image = augmenter.distort(image)\n",
-        "    return image\n"
+        "    return image"
       ],
       "outputs": [],
       "metadata": {
@@ -268,7 +250,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Data loading utilities"
+        "## データ読み込みユーティリティ"
       ],
       "metadata": {
         "id": "ZVB6ldKHE1VF"
@@ -278,7 +260,6 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "\n",
         "def create_individual_ds(ds, aug_func, source=True):\n",
         "    if source:\n",
         "        batch_size = SOURCE_BATCH_SIZE\n",
@@ -294,7 +275,7 @@
         "        ds = ds.map(lambda x, y: (aug_func(x, False), y), num_parallel_calls=AUTO)\n",
         "\n",
         "    ds = ds.batch(batch_size).prefetch(AUTO)\n",
-        "    return ds\n"
+        "    return ds"
       ],
       "outputs": [],
       "metadata": {
@@ -304,8 +285,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "`_w` and `_s` suffixes denote weak and strong respectively.\n",
-        "\n",
         "接尾辞の`_w`と`_s`は、それぞれ弱いことと強いことを表しています。"
       ],
       "metadata": {
@@ -333,8 +312,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Here's what a single image batch looks like:\n",
-        "\n",
         "シングルイメージバッチのイメージはこんな感じです。\n",
         "\n",
         "![](https://i.imgur.com/aver8cG.png)"
@@ -346,7 +323,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Loss computation utilities"
+        "## 損失計算ユーティリティ"
       ],
       "metadata": {
         "id": "02AYNwTME1VG"
@@ -356,7 +333,6 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "\n",
         "def compute_loss_source(source_labels, logits_source_w, logits_source_s):\n",
         "    loss_func = keras.losses.CategoricalCrossentropy(from_logits=True)\n",
         "    # First compute the losses between original source labels and\n",
@@ -378,7 +354,7 @@
         "    # More on `mask` later.\n",
         "    mask = tf.cast(mask, target_loss.dtype)\n",
         "    target_loss *= mask\n",
-        "    return tf.reduce_mean(target_loss, 0)\n"
+        "    return tf.reduce_mean(target_loss, 0)"
       ],
       "outputs": [],
       "metadata": {
@@ -388,30 +364,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Subclassed model for AdaMatch training\n",
-        "\n",
-        "The figure below presents the overall workflow of AdaMatch (taken from the [original paper](https://arxiv.org/abs/2106.04732)):\n",
+        "## AdaMatchトレーニング用にサブクラス化されたモデル\n",
         "\n",
         "下図は、AdaMatchの全体的なワークフローを示しています（[原著論文](https://arxiv.org/abs/2106.04732)より引用）。\n",
         "\n",
         "![](https://i.imgur.com/1QsEm2M.png)\n",
         "\n",
-        "Here's a brief step-by-step breakdown of the workflow:\n",
-        "\n",
         "ここでは、ワークフローを簡単にステップ・バイ・ステップで説明します。\n",
-        "\n",
-        "1. We first retrieve the weakly and strongly augmented pairs of images from the source and target datasets.\n",
-        "2. We prepare two concatenated copies:\n",
-        "    i. One where both pairs are concatenated.\n",
-        "    ii. One where only the source data image pair is concatenated.\n",
-        "3. We run two forward passes through the model:\n",
-        "    i. The first forward pass uses the concatenated copy obtained from **2.i**.In this forward pass, the [Batch Normalization](https://arxiv.org/abs/1502.03167) statistics are updated.\n",
-        "    ii. In the second forward pass, we only use the concatenated copy obtained from **2.ii**.\n",
-        "    Batch Normalization layers are run in inference mode.\n",
-        "4. The respective logits are computed for both the forward passes.\n",
-        "5. The logits go through a series of transformations, introduced in the paper (which we will discuss shortly).\n",
-        "6. We compute the loss and update the gradients of the underlying model.\n",
-        "---\n",
         "\n",
         "1. まず，ソースデータセットとターゲットデータセットから，弱く増強された画像と強く増強された画像のペアを検索する．\n",
         "2. 2つの連結されたコピーを用意する．\n",
@@ -433,7 +392,6 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "\n",
         "class AdaMatch(keras.Model):\n",
         "    def __init__(self, model, total_steps, tau=0.9):\n",
         "        super(AdaMatch, self).__init__()\n",
@@ -527,7 +485,7 @@
         "        self.optimizer.apply_gradients(zip(gradients, self.model.trainable_variables))\n",
         "\n",
         "        self.loss_tracker.update_state(total_loss)\n",
-        "        return {\"loss\": self.loss_tracker.result()}\n"
+        "        return {\"loss\": self.loss_tracker.result()}"
       ],
       "outputs": [],
       "metadata": {
@@ -537,29 +495,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The authors introduce three improvements in the paper:\n",
-        "\n",
         "本論文では、3つの改善点を紹介しています。\n",
         "\n",
-        "* In AdaMatch, we perform two forward passes, and only one of them is respsonsible for updating the Batch Normalization statistics.  \n",
-        "This is done to account for distribution shifts in the target dataset.  \n",
-        "In the other forward pass, we only use the source sample, and the Batch Normalization layers are run in inference mode.  \n",
-        "Logits for the source samples (weakly and strongly augmented versions) from these two passes are slightly different from one another because of how Batch Normalization layers are run.  \n",
-        "Final logits for the source samples are computed by linearly interpolating between these two different pairs of logits.  \n",
-        "This induces a form of consistency regularization.  \n",
-        "This step is referred to as **random logit interpolation**.\n",
-        "\n",
-        "* **Distribution alignment** is used to align the source and target label distributions.  \n",
-        "This further helps the underlying model learn *domain-invariant representations*.  \n",
-        "In case of unsupervised domain adaptation, we don't have access to any labels of the target dataset.  \n",
-        "This is why pseudo labels are generated from the underlying model.\n",
-        "\n",
-        "* The underlying model generates pseudo-labels for the target samples.  \n",
-        "It's likely that the model would make faulty predictions.  \n",
-        "Those can propagate back as we make progress in the training, and hurt the overall performance.  \n",
-        "To compensate for that, we filter the high-confidence predictions based on a threshold (hence the use of `mask` inside `compute_loss_target()`).  \n",
-        "In AdaMatch, this threshold is relatively adjusted which is why it is called **relative confidence thresholding**.\n",
-        "---\n",
         "* AdaMatchでは、2つのフォワードパスを実行し、そのうちの1つだけがBatch Normalization統計の更新を担当します。  \n",
         "これは、ターゲットデータセットの分布の変化を考慮して行われます。  \n",
         "もう一方のフォワードパスでは，ソースサンプルのみを使用し，バッチ正規化レイヤーは推論モードで実行されます。  \n",
@@ -579,24 +516,15 @@
         "これを補うために，ある閾値に基づいて，信頼度の高い予測をフィルタリングします（そのため，`compute_loss_target()`の中で`mask`を使っています）。  \n",
         "AdaMatchでは、このしきい値は相対的に調整されるので、**相対的信頼度しきい値**と呼ばれています。\n",
         "\n",
-        "For more details on these methods and to know how each of them contribute please refer to [the paper](https://arxiv.org/abs/2106.04732).\n",
-        "\n",
         "これらの方法の詳細や、それぞれの方法がどのように貢献しているのかについては、[論文](https://arxiv.org/abs/2106.04732)を参照してください。\n",
         "\n",
-        "**About `compute_mu()`**:\n",
-        "\n",
-        "Rather than using a fixed scalar quantity, a varying scalar is used in AdaMatch.  \n",
-        "It denotes the weight of the loss contibuted by the target samples.  \n",
-        "Visually, the weight scheduler look like so:\n",
+        "**`compute_mu()`について**:\n",
         "\n",
         "AdaMatch では、固定のスカラー量を使用するのではなく、変化するスカラーを使用します。  \n",
         "これは、ターゲットサンプルによって構成された損失の重みを表します。  \n",
         "ウェイトスケジューラーは次のようになります。\n",
         "\n",
         "![](https://i.imgur.com/dG7i9uH.png)\n",
-        "\n",
-        "This scheduler increases the weight of the target domain loss from 0 to 1 for the first half of the training.  \n",
-        "Then it keeps that weight at 1 for the second half of the training.\n",
         "\n",
         "このスケジューラーは、トレーニングの前半では、目標とするドメインの損失の重みを0から1に増やし、後半ではその重みを1に保つ。  \n",
         "そして、トレーニングの後半ではその重みを1のままにします。"
@@ -608,11 +536,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Instantiate a Wide-ResNet-28-2\n",
-        "\n",
-        "The authors use a [WideResNet-28-2](https://arxiv.org/abs/1605.07146) for the dataset pairs we are using in this example.  \n",
-        "Most of the following code has been referred from [this script](https://github.com/asmith26/wide_resnets_keras/blob/master/main.py).  \n",
-        "Note that the following model has a scaling layer inside it that scales the pixel values to [0, 1].\n",
+        "## Wide-ResNet-28-2のインスタンス化\n",
         "\n",
         "この例で使用しているデータセットペアには、著者は[WideResNet-28-2](https://arxiv.org/abs/1605.07146)を使用しています。  \n",
         "以下のコードのほとんどは、[this script](https://github.com/asmith26/wide_resnets_keras/blob/master/main.py)を参考にしています。  \n",
@@ -626,7 +550,6 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "\n",
         "def wide_basic(x, n_input_plane, n_output_plane, stride):\n",
         "    conv_params = [[3, 3, stride, \"same\"], [3, 3, (1, 1), \"same\"]]\n",
         "\n",
@@ -746,7 +669,7 @@
         "        num_classes, kernel_regularizer=regularizers.l2(WEIGHT_DECAY)\n",
         "    )(trunk_outputs)\n",
         "\n",
-        "    return keras.Model(inputs, outputs)\n"
+        "    return keras.Model(inputs, outputs)"
       ],
       "outputs": [],
       "metadata": {
@@ -756,8 +679,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We can now instantiate a Wide ResNet model like so. Note that the purpose of using a Wide ResNet here is to keep the implementation as close to the original one as possible.\n",
-        "\n",
         "これで、Wide ResNetモデルを以下のようにインスタンス化することができます。なお、ここでWide ResNetを使う目的は、実装をできるだけオリジナルに近づけるためです。"
       ],
       "metadata": {
@@ -779,7 +700,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Instantiate AdaMatch model and compile it"
+        "## AdaMatchモデルのインスタンス化とコンパイル"
       ],
       "metadata": {
         "id": "BvY5HHKzE1VJ"
@@ -803,7 +724,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Model training"
+        "## モデルトレーニング"
       ],
       "metadata": {
         "id": "_mrOLWrQE1VJ"
@@ -824,7 +745,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Evaluation on the target and source test sets"
+        "## ターゲットテストセットとソーステストセットでの評価"
       ],
       "metadata": {
         "id": "XQlY5M58E1VJ"
@@ -851,9 +772,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "With more training, this score improves. When this same network is trained with standard classification objective, it yields an accuracy of **7.20%** which is significantly lower than what we got with AdaMatch.  \n",
-        "You can check out [this notebook](https://colab.research.google.com/github/sayakpaul/AdaMatch-TF/blob/main/Vanilla_WideResNet.ipynb) to learn more about the hyperparameters and other experimental details.\n",
-        "\n",
         "トレーニングを重ねることで、このスコアは向上します。同じネットワークを標準的な分類目的で学習した場合、精度は **7.20%** となり、AdaMatchで得られたものよりも著しく低いものとなります。 \n",
         "ハイパーパラメータやその他の実験の詳細については、[this notebook](https://colab.research.google.com/github/sayakpaul/AdaMatch-TF/blob/main/Vanilla_WideResNet.ipynb)をご覧ください"
       ],
@@ -865,7 +783,6 @@
       "cell_type": "code",
       "execution_count": null,
       "source": [
-        "\n",
         "# Utility function for preprocessing the source test set.\n",
         "def prepare_test_ds_source(image, label):\n",
         "    image = tf.image.resize_with_pad(image, RESIZE_TO, RESIZE_TO)\n",
@@ -892,18 +809,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "You can reproduce the results by using these [model weights](https://github.com/sayakpaul/AdaMatch-TF/releases/tag/v1.0.0).\n",
-        "\n",
         "この[モデルウェイト](https://github.com/sayakpaul/AdaMatch-TF/releases/tag/v1.0.0)を使って再現することができます。"
       ],
       "metadata": {
         "id": "NfmHdRYJE1VK"
       }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {}
     }
   ]
 }
